--- a/Index.html
+++ b/Index.html
@@ -1,42 +1,23 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
+
 <table>
     <caption>
-      Front-end web developer course 2021
+        Uudiskiri
     </caption>
-    <thead>
-      <tr>
-        <th scope="col">Person</th>
-        <th scope="col">Most interest in</th>
-        <th scope="col">Age</th>
-      </tr>
-    </thead>
     <tbody>
-      <tr>
-        <th scope="row">Chris</th>
-        <td>HTML tables</td>
-        <td>22</td>
-      </tr>
-      <tr>
-        <th scope="row">Dennis</th>
-        <td>Web accessibility</td>
-        <td>45</td>
-      </tr>
-      <tr>
-        <th scope="row">Sarah</th>
-        <td>JavaScript frameworks</td>
-        <td>29</td>
-      </tr>
-      <tr>
-        <th scope="row">Karen</th>
-        <td>Web performance</td>
-        <td>36</td>
-      </tr>
+        
+        <tr>
+            <th scope="row"><H1>Lorem, ipsum dolor.</H1>Lorem ipsum dolor sit, amet consecteturuam quae blanditiis corp, sapiente ea quam eligendi alias nemo cumque veniam, quaerat tempora repudiandae fugiat possimus veritatis vel, aperiam qui nulla? Mollitia enim fuga tempora.</th>
+            <th scope="row"><H1>Lorem, ipsum.</H1>Lorem ipsum dolor sit amet consectic im nemo sequi reprehenderit fugit quidem, excepturi aliquam laudantium sit similique commodi qui adipisci expedita libero sapiente pariatur ducimus quae minus soluta molestias sed.</th>
+        </tr>
+        <tr>
+            <th scope="row"><h2>Lorem, ipsum dolor.</H2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A numquam aperiam odio quaerat deleniti fugiat? Laboriosam mollitia id ipsa. Blanditiis aspernatur quasi tempore autem similique aliquam reiciendis explicabo facere quos?</th>
+            <th scope="row"><h2>Lorem ipsum dolor sit.</H2>At vero eos et accusma et usifuijae osadni jidsjmasnsa9jmias9 idcos,fdij qi0 bösotg99sk opajaskjo</th>
+        </tr>
     </tbody>
     <tfoot>
-      <tr>
-        <th scope="row" colspan="2">Average age</th>
-        <td>33</td>
-      </tr>
+        <tr>
+            <th colspan="2"><H1>Lorem ipsum dolor sit.</H1>At vero eos et accusamus et isuto ason sidifinimus dcimus qui lslap palsei <h3>CUPIDITATE</h3></th>
+        </tr>
     </tfoot>
-  </table>
-  
+</table>  
