--- a/Index.html
+++ b/Index.html
@@ -1,23 +1,222 @@
-<link rel="stylesheet" type="text/css" href="style.css" />
+<!DOCTYPE html>
+<html lang="et">
+ 
+<head>
+<title>Uudiskiri</title>
+</head>
+ 
+<body
 
-<table>
-    <caption>
-        Uudiskiri
-    </caption>
-    <tbody>
-        
-        <tr>
-            <th scope="row"><H1>Lorem, ipsum dolor.</H1>Lorem ipsum dolor sit, amet consecteturuam quae blanditiis corp, sapiente ea quam eligendi alias nemo cumque veniam, quaerat tempora repudiandae fugiat possimus veritatis vel, aperiam qui nulla? Mollitia enim fuga tempora.</th>
-            <th scope="row"><H1>Lorem, ipsum.</H1>Lorem ipsum dolor sit amet consectic im nemo sequi reprehenderit fugit quidem, excepturi aliquam laudantium sit similique commodi qui adipisci expedita libero sapiente pariatur ducimus quae minus soluta molestias sed.</th>
-        </tr>
-        <tr>
-            <th scope="row"><h2>Lorem, ipsum dolor.</H2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A numquam aperiam odio quaerat deleniti fugiat? Laboriosam mollitia id ipsa. Blanditiis aspernatur quasi tempore autem similique aliquam reiciendis explicabo facere quos?</th>
-            <th scope="row"><h2>Lorem ipsum dolor sit.</H2>At vero eos et accusma et usifuijae osadni jidsjmasnsa9jmias9 idcos,fdij qi0 bösotg99sk opajaskjo</th>
-        </tr>
-    </tbody>
-    <tfoot>
-        <tr>
-            <th colspan="2"><H1>Lorem ipsum dolor sit.</H1>At vero eos et accusamus et isuto ason sidifinimus dcimus qui lslap palsei <h3>CUPIDITATE</h3></th>
-        </tr>
-    </tfoot>
-</table>  
+    style="font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; display: flex; justify-content: center; align-items: center; height: 100vh;">
+ 
+    <table
+
+        style="width: 800px; background-color: #e0e0e0; padding: 20px; border-radius: 10px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);">
+<tr>
+<td>
+<table
+
+                    style="width: 100%; background-color: white; border: 1px solid #ddd; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);">
+<tr>
+<td>
+<table style="width: 100%; background-color: #02070c; color: white; text-align: center;">
+<tr>
+<td style="padding: 20px;">
+<h1 style="margin: 0; font-size: 28px;">Uudiskiri</h1>
+</td>
+</tr>
+</table>
+</td>
+</tr>
+ 
+                    <tr>
+<td>
+<table style="width: 100%; padding: 20px;">
+<tr>
+<td style="width: 50%; padding: 15px; border: 1px solid #ddd;">
+<h2 style="font-size: 20px; margin-top: 0;">Sigma</h2>
+<p style="font-size: 16px; margin-bottom: 0;">
+
+                                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+
+                                            praesentium voluptatum deleniti atque corrupti quos dolores et quas
+
+                                            molestias excepturi sint occaecati cupiditate non provident, similique sunt
+
+                                            in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
+
+                                            fuga.
+</p>
+</td>
+ 
+                                    <td style="width: 50%; padding: 15px; border: 1px solid #ddd;">
+<h2 style="font-size: 20px; margin-top: 0;">Sigma2</h2>
+<p style="font-size: 16px; margin-bottom: 0;">
+
+                                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+
+                                            praesentium voluptatum deleniti atque corrupti quos dolores et quas
+
+                                            molestias excepturi sint occaecati cupiditate non provident, similique sunt
+
+                                            in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
+
+                                            fuga.
+</p>
+</td>
+</tr>
+<tr>
+<td style="width: 50%; padding: 15px;">
+<h3 style="font-size: 18px; margin-top: 0;">Hetero</h3>
+<p style="font-size: 16px;">At vero eos et accusamus et iusto odio dignissimos
+
+                                            ducimus qui blanditiis praesentium.</p>
+</td>
+<td style="width: 50%; padding: 15px; position: relative;">
+<div
+
+                                            style="position: absolute; top: 20px; left: -5px; height: 100%; border-left: 1px solid #ddd;">
+</div>
+<h3 style="font-size: 18px; margin-top: 0;">Hetero2</h3>
+<p style="font-size: 16px;">At vero eos et accusamus et iusto odio dignissimos
+
+                                            ducimus qui blanditiis praesentium.</p>
+</td>
+</tr>
+<tr>
+<td colspan="2">
+<hr
+
+                                            style="border: none; height: 1px; background-color: #ddd; margin: 25px 10px 0;">
+</td>
+</tr>
+</table>
+</td>
+</tr>
+ 
+ 
+                    <tr>
+<td>
+<table style="width: 100%; margin-top: 30px; margin-bottom: 30px;">
+<tr>
+<td>
+<table
+
+                                            style="width: 100%; text-align: center; background-color: #afc6ec; padding: 15px; border-radius: 5px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);">
+<tr>
+<td>
+<h2 style="font-size: 20px;">QUOS DOLORES ET QUAS</h2>
+<p style="font-size: 16px;">At vero eos et accusamus et iusto odio
+
+                                                        dignissimos ducimus qui blanditiis praesentium.</p>
+<a href="#"
+
+                                                        style="display:inline-block; background-color:#007bff; color:white; text-decoration:none; padding:12px 25px; box-shadow: inset 3px 3px 6px #FFFFFF5D, 3px 3px 12px #2F313862; opacity: 1; font-size:16px; border-radius:10px;">CUPIDITATE</a>
+</td>
+</tr>
+</table>
+</td>
+</tr>
+</table>
+</td>
+</tr>
+ 
+ 
+                    <tr>
+<td>
+<table style="width: 100%; text-align:center; font-size:14px; color:#999;">
+<tr>
+<td style="padding-top:20px;">
+
+                                        At Vero Eos Et Accusamus Et Iusto Odio Dignissimos Ducimus Qui Blanditiis
+
+                                        Praesentium Voluptatum Deleniti Atque Corrupti Quos Dolores Et Quas Molestias
+
+                                        Excepturi Sint Occaecati Cupiditate Non Provident, Similique Sunt In Culpa Qui
+
+                                        Officia Deserunt
+<br><a href="#" style="color:#999;">Subscribe
+</a>
+</td>
+</tr>
+</table>
+</td>
+</tr>
+ 
+                </table>
+</td>
+</tr>
+</table>
+ 
+    <script>
+
+        if ('WebSocket' in window) {
+
+            (function () {
+
+                function refreshCSS() {
+
+                    var sheets = [].slice.call(document.getElementsByTagName("link"));
+
+                    var head = document.getElementsByTagName("head")[0];
+
+                    for (var i = 0; i < sheets.length; ++i) {
+
+                        var elem = sheets[i];
+
+                        var parent = elem.parentElement || head;
+
+                        parent.removeChild(elem);
+
+                        var rel = elem.rel;
+
+                        if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+
+                            var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+
+                            elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+
+                        }
+
+                        parent.appendChild(elem);
+
+                    }
+
+                }
+
+                var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+
+                var address = protocol + window.location.host + window.location.pathname + '/ws';
+
+                var socket = new WebSocket(address);
+
+                socket.onmessage = function (msg) {
+
+                    if (msg.data == 'reload') window.location.reload();
+
+                    else if (msg.data == 'refreshcss') refreshCSS();
+
+                };
+
+                if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+
+                    console.log('Live reload enabled.');
+
+                    sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+
+                }
+
+            })();
+
+        }
+
+        else {
+
+            console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+
+        }
+</script>
+</body>
+ 
+</html>
+ 
